// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should display input test string, and a div in place of description with style of display none 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "Column",
      "height": "auto",
      "justifyContent": "center",
      "minWidth": "40vw",
      "width": "auto",
    }
  }
>
  <h1>
    Test String
  </h1>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Title should display input test string, and description block with the same text 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "Column",
      "height": "auto",
      "justifyContent": "center",
      "minWidth": "40vw",
      "width": "auto",
    }
  }
>
  <h1>
    Test String
  </h1>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "Test String",
      }
    }
    style={
      Object {
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "height": "auto",
        "margin": "3%",
        "width": "90%",
      }
    }
  />
</div>
`;

exports[`Title should display untitled, and a div in place of description with style of display none 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "Column",
      "height": "auto",
      "justifyContent": "center",
      "minWidth": "40vw",
      "width": "auto",
    }
  }
>
  <h1>
    untitled
  </h1>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;
